--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
 
 .app {
   width: 100%;
-  /* height: 100vh; */
+  height: 100%;
   position: relative;
   background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
@@ -38,10 +38,10 @@ h1 {
     background: #33ccbd;
   }
   40% {
-    background: #33cca3;
+    background: #3be7bc;
   }
   60% {
-    background: #00fc97;
+    background: #6eddcc;
   }
   80% {
     background: #33bdcc;
@@ -93,19 +93,6 @@ h1 {
   }
 }
 
-.app:before {
-  content: '';
-  background: url('./assets/kevin-ianeselli-4iTVoGYY7bM-unsplash\ \(1\).jpg')
-    no-repeat center center/cover; /* fallback*/
-  animation: idle 9s infinite linear;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
 .animated-bg-cold {
   animation: color 9s infinite linear;
 }
@@ -120,14 +107,16 @@ h1 {
 
 .app .search {
   text-align: center;
-  padding: 1rem;
+  padding: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .app input {
-  margin-top: 2rem;
   padding: 0.7rem 1.5rem;
   font-size: 1.2rem;
-  border-radius: 25px;
+  border-radius: 15px;
   border: 1px solid rgba(255, 255, 255, 0.8);
   background: rgba(255, 255, 255, 0.1);
   color: #f8f8f8;
@@ -147,7 +136,7 @@ h1 {
   top: 10%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 .app .top {
@@ -157,18 +146,18 @@ h1 {
 }
 
 .location-name {
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 }
-/* .app .image {
-  position: relative;
-  right: -80%;
-  top: -45%;
-} */
+
+.main-info {
+  display: flex;
+  justify-content: space-between;
+}
 
 .app .description {
-  position: relative;
-  right: -83%;
-  top: -50%;
+  /* position: relative;
+  right: -80%;
+  top: -30%; */
   display: flex;
   flex-direction: column;
 
@@ -185,7 +174,7 @@ h1 {
   justify-content: space-evenly;
   text-align: center;
   width: 100%;
-  margin: 1rem auto 2rem;
+  margin: 1rem auto 3rem;
   padding: 1rem;
   border-radius: 12px;
   background-color: rgba(255, 255, 255, 0.2);
@@ -195,6 +184,20 @@ h1 {
   font-weight: 700;
 }
 
+.tomorrow {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+
+.box {
+  width: 97.1px;
+}
+
 @media only screen and (max-width: 600px) {
   p {
     font-size: 1.2rem;
@@ -202,5 +205,18 @@ h1 {
   .feels,
   .humidity {
     margin-right: 12px;
+  }
+  .app:before {
+    content: '';
+    background: url('https://svgsilh.com/svg_v2/158601.svg') no-repeat center
+      center/cover; /* fallback*/
+    /* animation: idle 9s infinite linear; */
+    position: absolute;
+    width: 100vw;
+    height: 90px;
+    bottom: 0;
+    left: 0;
+    z-index: 9999999;
+    margin-left: 0 auto;
   }
 }
