--- a/src/index.css
+++ b/src/index.css
@@ -129,7 +129,7 @@ h1 {
 
 .container {
   max-width: 700px;
-  height: 100vh;
+  /* height: 100vh; */
   margin: auto;
   padding: 0 1rem;
   position: relative;
@@ -206,17 +206,17 @@ h1 {
   .humidity {
     margin-right: 12px;
   }
-  .app:before {
+  /* .app:before {
     content: '';
-    background: url('https://svgsilh.com/svg_v2/158601.svg') no-repeat center
-      center/cover; /* fallback*/
-    /* animation: idle 9s infinite linear; */
-    position: absolute;
+    background: url('https://svgsilh.com/svg_v2/158601.svg') no-repeat center */
+  /* center/cover; */
+  /* animation: idle 9s infinite linear; */
+  /* position: absolute;
     width: 100vw;
-    height: 90px;
+    height: 50px;
     bottom: 0;
     left: 0;
     z-index: 9999999;
     margin-left: 0 auto;
-  }
+  } */
 }
